img max-width textarea size Page Privacy position to right-top

--- a/services/kwiki/.default/theme/basic/css/kwiki.css
+++ b/services/kwiki/.default/theme/basic/css/kwiki.css
@@ -16,11 +16,12 @@
 
 #group_2 {
     vertical-align: top;
-    width: 125px;
+    width: 0px;
 }
 
 body {
     background:#fff;        
+    overflow:hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -36,3 +37,23 @@ h1, h2, h3, h4, h5, h6 {
 div.navigation a:visited {
     color: #00f;
 }
+
+/* for OpenFoundry below by wangaguo */
+img{/* limit image max width only for firefox*/
+    max-width: 95%;
+}
+
+textarea {
+    width: 95%;
+    height: 350px;
+}
+
+#widgets_pane{/* set page privacy at right-top */
+    font-size: 12px;
+    position: absolute;
+    width: 45px;
+    right: 45px;
+    white-space: nowrap;
+    line-height: 9px;
+}
+
