edit/display roles

--- a/branches/0.1/app/views/project/_form.rhtml
+++ b/branches/0.1/app/views/project/_form.rhtml
@@ -5,6 +5,6 @@
 <%= text_field 'project', 'unixname'  %></p>
 
 <p><label for="project_license">License</label><br/>
-<%= text_field 'project', 'license'  %></p>
+<%= select 'project', 'license', Project::LICENSES %></p>
 <!--[eoform:project]-->
 
