--- a/branches/0.1/app/views/project/new.rhtml
+++ b/branches/0.1/app/views/project/new.rhtml
@@ -1,3 +1,4 @@
+<div id="ProjectNew">
 <h1>New project</h1>
 
 <% form_tag :action => 'create' do %>
@@ -6,3 +7,4 @@
 <% end %>
 
 <%= link_to 'Back', :action => 'list' %>
+</div>
