--- a/branches/0.1/app/views/openfoundry/index.rhtml
+++ b/branches/0.1/app/views/openfoundry/index.rhtml
@@ -1,2 +1,5 @@
-<h1>Openfoundry#index</h1>
-<p>Find me in app/views/openfoundry/index.rhtml</p>
+<div id="RightWidget"><h3>OpenFoundry Epaper</h3><br/><br/><br/><br/><h3>Top Downloads</h3><br/><br/><br/><br/><h3>Statistic</h3></div>
+<div id="Home">
+  <h1>Openfoundry#index</h1>
+  <p>Find me in app/views/openfoundry/index.rhtml</p>
+</div>
