--- a/branches/0.1/app/views/user/login.rhtml
+++ b/branches/0.1/app/views/user/login.rhtml
@@ -1,17 +1,14 @@
-<div title="<%= title_helper %>" class="form">
-  <%= head_helper %>
-
+<div title="Login Form" class="form">
+  <h1><%= _("Login to OpenFoundry") %></h1>
   <div class="form-padding">
     <%= start_form_tag_helper  %>
-      <table>
-        <%= form_input :text_field, "login", :size => 30 %><br/>
-        <%= form_input :password_field, "password", :size => 30 %><br/>
-      </table>
-
+      <label for="user_login"><%= _("Login ID") %>:</label><%= text_field("user", "login", :size => 30) %> 
+      <label for="user_password"><%= _("Password") %>:</label><%= password_field("user", "password", :size => 30) %> 
       <div class="button-bar">
-        <%= button_helper 'login' %>
-        <%= link_helper 'login_signup', :action => 'signup' %> | 
-        <%= link_helper 'login_forgot_password', :action => 'forgot_password' %>      </div>
+        <%= submit_tag _("Login") %>
+        <%= link_to _('Register for an account'), :action => 'signup' %> |
+        <%= link_to _('Forgot my password'), :action => 'forgot_password' %>
+      </div>
     <%= end_form_tag %>
   </div>
 </div>
