add full-text search (acts_as_ferret) support !!REQUIRE GEMS: !!gem i ferret !!gem i acts_as_ferret

--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -15,7 +15,7 @@
 	<div id="access"></div>
 	<span id="rightbg">&nbsp;</span>
 	<span id="search">
-			SearchArea
+		<%= render :partial => 'partials/search'%>	
 	</span>
 	<div id="top">
 		<a href="http://rt.openfoundry.org" target="_black"><img src="http://www.openfoundry.org/images/stories/open_foundry.gif" border="0" alt="OpenFoundry" /></a>      &nbsp;&nbsp;
