add tag cloud and tag edit UI for User and Project

--- a/branches/0.1/app/views/openfoundry/index.rhtml
+++ b/branches/0.1/app/views/openfoundry/index.rhtml
@@ -1,4 +1,12 @@
-<div id="RightWidget"><h3>OpenFoundry Epaper</h3><br/><br/><br/><br/><h3>Top Downloads</h3><br/><br/><br/><br/><h3>Statistic</h3></div>
+<div id="RightWidget">
+        <h3>Tag Cloud</h3>
+	<%= render :partial => 'partials/tagcloud'%>
+	<br/><br/><br/><br/>
+	<h3>OpenFoundry Epaper</h3>
+	<br/><br/><br/><br/>
+	<h3>Top Downloads</h3>
+	<br/><br/><br/><br/>
+	<h3>Statistic</h3></div>
 <div id="Home">
   <h1>Openfoundry#index</h1>
   <p>Find me in app/views/openfoundry/index.rhtml</p>
