--- a/branches/0.1/app/views/project/edit.rhtml
+++ b/branches/0.1/app/views/project/edit.rhtml
@@ -46,7 +46,21 @@
 <% end %>
 </fieldset>
 
+<fieldset>
+	<% form_tag :action => 'add_tag', :id => @project do %>
+	<label for="tag">Add a tag:</label><br/>
+	<%= hidden_field_tag 'class', 'Project' %>
+	<%= text_field_tag 'tag', '',{:size => 10} %>
+	<%= submit_tag 'Add Tag' %>
+	<% end %>
 
+	<% form_tag :action => 'remove_tag', :id => @project do %>
+	<label for="tag">Remove a tag:</label><br/>
+	<%= hidden_field_tag 'class', 'Project' %>
+	<%= select_tag 'tag[]', options_for_select(@project.tag_list.names), { :multiple => true, :size => 5 } %>
+	<%= submit_tag 'Remove Tag' %>
+	<% end %>
+</fieldset>
 
 <%= link_to 'Show', :action => 'show', :id => @project %> |
 <%= link_to 'Back', :action => 'list' %>
