--- a/branches/0.1/app/views/user/edit.rhtml
+++ b/branches/0.1/app/views/user/edit.rhtml
@@ -16,5 +16,20 @@
         <%= form_input :submit_button, 'delete_account' %>
       </div>
     <%= end_form_tag %>
+<fieldset>
+        <% form_tag :action => 'add_tag', :id => @user do %>
+        <label for="tag">Add a tag:</label><br/>
+        <%= hidden_field_tag 'class', 'User' %>
+        <%= text_field_tag 'tag', '',{:size => 10} %>
+        <%= submit_tag 'Add Tag' %>
+        <% end %>
+
+        <% form_tag :action => 'remove_tag', :id => @user do %>
+        <label for="tag">Remove a tag:</label><br/>
+        <%= hidden_field_tag 'class', 'User' %>
+	<%= select_tag 'tag[]', options_for_select(@user.tag_list.names.collect {|s| [s,s] }), { :multiple => true, :size => 10} %>
+        <%= submit_tag 'Remove Tag' %>
+        <% end %>
+</fieldset>
   </div>
 </div>
