--- a/branches/0.1/app/views/openfoundry/index.rhtml
+++ b/branches/0.1/app/views/openfoundry/index.rhtml
@@ -72,7 +72,11 @@
   ** 0.2 features
   *** CVS / Subversion
   *** Search (不含子系統)
+  **** 全文檢索
+  **** 分類搜尋
   *** Tagging
+  **** Tag Cloud
+  **** Tags 搜尋
   </pre>
   Subversion: http://svn.openfoundry.org/openfoundry/
 </div>
