--- a/trunk/services/vcs/viewvc/templates/docroot/help_log.html
+++ b/trunk/services/vcs/viewvc/templates/docroot/help_log.html
@@ -5,6 +5,7 @@
   <title>ViewVC Help: Log View</title>
   <link rel="stylesheet" href="help.css" type="text/css" />
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <script type="text/javascript" src="of.js"></script>
 </head>
 <body>
   <table>
