--- a/trunk/services/vcs/viewvc/templates/docroot/help_rootview.html
+++ b/trunk/services/vcs/viewvc/templates/docroot/help_rootview.html
@@ -4,6 +4,7 @@
 <head>
   <title>ViewVC Help: General</title>
   <link rel="stylesheet" href="help.css" type="text/css" />
+  <script type="text/javascript" src="of.js"></script>
 </head>
 <body>
   <table>
