Modify UI for OpenFoundry

--- a/services/vcs/viewvc/templates/docroot/help_dirview.html
+++ b/services/vcs/viewvc/templates/docroot/help_dirview.html
@@ -4,6 +4,7 @@
 <head>
   <title>ViewVC Help: Directory View</title>
   <link rel="stylesheet" href="help.css" type="text/css" />
+  <script type="text/javascript" src="of.js"></script>
 </head>
 <body>
   <table>
