--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -5,9 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= _("OpenFoundry") %> -- <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold1' %>
-  <%= stylesheet_link_tag 'openfoundry' %>
-	<%= stylesheet_link_tag "openfoundry", "header", "transmenu" %>
+	<%= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
   <%= javascript_include_tag "prototype", "effects", "transmenu"%>
 
 </head>
