--- a/branches/0.1/public/stylesheets/openfoundry.css
+++ b/branches/0.1/public/stylesheets/openfoundry.css
@@ -1,6 +1,10 @@
+* {
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:12px;
+}
+
 body {
 	margin: 0px;
-	font-size: 12px;
 }
 
 #LeftMenu ul {
@@ -60,6 +64,7 @@ a {
   margin-left:16%;
   width:84%;
 }
+
 #MainBody {
 }
 
