--- a/branches/0.1/public/stylesheets/scaffold.css
+++ b/branches/0.1/public/stylesheets/scaffold.css
@@ -1,3 +1,4 @@
+/*
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
@@ -6,15 +7,22 @@ body, p, ol, ul, td {
   line-height: 18px;
 }
 
+
 pre {
   background-color: #eee;
   padding: 10px;
   font-size: 11px;
 }
 
+
 a { color: #000; }
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
+textarea {
+  width: auto;
+  height: 100px;
+}
+*/
 
 .fieldWithErrors {
   padding: 2px;
@@ -72,7 +80,3 @@ div.progressBar div.background {
   width: 0%;
 }
 
-textarea {
-  width: auto;
-  height: 100px;
-}
