--- a/branches/0.1/app/views/user/change_password.rhtml
+++ b/branches/0.1/app/views/user/change_password.rhtml
@@ -4,12 +4,12 @@
   <div class="form-padding">
     <%= message_helper 'change' %>
 
-    <%= start_form_tag_helper %>
+    <% start_form_tag_helper do -%>
       <%= render :partial => 'password', :locals => {:user => @user, :submit => false} %>
       <div class="button-bar">
         <%= button_helper 'change_password' %>
         <%= link_helper 'change_cancel_welcome', :action => 'welcome' %>
       </div>
-    <%= end_form_tag %>
+    <% end -%>
   </div>
 </div>
