--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -32,41 +32,87 @@
 
 <div id="MiddlePane">
 <div id="LeftWidget">
-<br/>
-<%= render :partial => 'partials/login' %>
-<div id="LeftMenu">
-<ul>
-	<li>
-<%= link_to _("Home"), { :action => :index, :controller => :openfoundry} %>
-	</li>
-</ul>
-<h3>User</h3>
-<ul>
-	<li>
-		<%= link_to "Change Password", { :action => :change_password, :controller => :user} %>
-	</li>
-	<li>
-		<%= link_to "User Home", { :action => :home, :controller => :user} %>
-	</li>
-	<li>
-		<%= link_to "User Data", { :action => :edit, :controller => :user} %>
-	</li>
-        <li>
-                <%= link_to "Online Users", { :action => :online_users, :controller=> :user} %>
+	<br/>
+	<%= render :partial => 'partials/login' %>
+		<h3>Tag Cloud</h3>
+		<%= render :partial => 'partials/tagcloud'%>
+	
+	<div id="LeftMenu">
+		<h3>專案功能</h3>
+    <ul>
+        <li>專案資訊</a>
+            <ul>
+                <li>專案摘要</li>
+                <li>專案網站</li>
+                <li>專案成員</li>
+                <li>畫面擷取</li>
+                <li>引用資訊</li>
+                <li>參考文獻</li>
+                <li>專案新聞</li>
+                <li>徵人公告</li>
+                <li>統計資訊</li>
+            </ul>
         </li>
-</UL>
-<h3>Project</h3>
-<ul>
-	<li>
-		<%= link_to "Project List", { :action => :list, :controller => :project} %>
-	</li>
-	<li>
-		<%= link_to "Create Project", { :action => :new, :controller => :project} %>
-	</li>
-</UL>
-</div>
-	<h3>Tag Cloud</h3>
-	<%= render :partial => 'partials/tagcloud'%>
+        <li>待辦事項
+            <ul>
+                <li>綜覽</li>
+                <li>瑕疵</li>
+                <li>修正檔</li>
+                <li>工作事項 </li>
+                <li>新功能</li>
+                <li>改進</li>
+                <li>統計資訊</li>
+                <li>搜尋</li>
+            </ul>
+        </li>
+        <li>共同筆記</li>
+        <li>版本控制
+            <ul>
+                <li>Subversion or CVS Browse </li>
+                <li>Download Subversion or CVS</li>
+            </ul>
+        </li>
+        <li>通訊論壇</li>
+        <li>下載區</li>
+        <li>工作任務</li>
+        <li>服務</li>
+    </ul>
+		
+		<h3>專案管理</h3>
+    <ul>
+        <li>專案資訊
+            <ul>
+                <li>專案摘要</li>
+                <li>專案網站</li>
+                <li>專案成員</li>
+                <li>畫面擷取</li>
+                <li>引用資訊</li>
+                <li>參考文獻</li>
+                <li>專案新聞</li>
+                <li>徵人公告</li>
+                <li>統計資訊</li>
+            </ul>
+        </li>
+        <li>待辦事項 </li>
+        <li>共同筆記 </li>
+        <li>版本控制
+            <ul>
+                <li>export / import / destroy </li>
+            </ul>
+        </li>
+        <li>通訊論壇 </li>
+        <li>規劃釋出
+            <ul>
+                <li>版本管理</li>
+                <li>上載區</li>
+            </ul>
+        </li>
+        <li>工作任務<br>
+        </li>
+        <li>服務</li>
+        <li>權限控管</li>
+    </ul>
+	</div>
 </div>
 
 <div id="MainContent">
