created_at & updated_at fields

--- a/branches/0.1/app/views/news/news_list.rhtml
+++ b/branches/0.1/app/views/news/news_list.rhtml
@@ -2,7 +2,7 @@
 
 <table>
 <% for news in @news %>
-  <tr><td><%=news.subject%><%=news.update_at%></td></tr>
+  <tr><td><%=news.subject%><%=news.updated_at%></td></tr>
 <% end %>
 </table>
 
