--- a/branches/0.1/app/views/news/show.rhtml
+++ b/branches/0.1/app/views/news/show.rhtml
@@ -1,5 +1,5 @@
 <h1><%=@news.subject%></h1>
-<p class="date"><%=@news.update_at.strftime("更新日期:%Y/%m/%d %H:%M")%></p>
+<p class="date"><%=@news.updated_at.strftime("更新日期:%Y/%m/%d %H:%M")%></p>
 <div class="content">
 <%= @news.description%>
 </div>
