--- a/branches/0.1/app/views/partials/_sed.rhtml
+++ b/branches/0.1/app/views/partials/_sed.rhtml
@@ -1,9 +1,9 @@
 <% if permit?("admin of :project") -%>
-    <td><%= link_to 'Show', :action => 'show', :id => @project %></td>
-    <td><%= link_to 'Edit', :action => 'edit', :id => @project %></td>
-    <td><%= link_to 'Destroy', { :action => 'destroy', :id => @project }, :confirm => 'Are you sure?', :method => :post %></td>
+    <td><%= link_to 'Show', :action => 'show', :id => project.id %></td>
+    <td><%= link_to 'Edit', :action => 'edit', :id => project.id %></td>
+    <td><%= link_to 'Destroy', { :action => 'destroy', :id => project.id }, :confirm => 'Are you sure?', :method => :post %></td>
 <% else %>
-  <td><%= link_to 'Show', :action => 'show', :id => @project %></td>
+  <td><%= link_to 'Show', :action => 'show', :id => project.id %></td>
   <td>Edit</td>
   <td>Destroy</td>
 <% end %>
