--- a/branches/0.1/app/views/project/_list.rhtml
+++ b/branches/0.1/app/views/project/_list.rhtml
@@ -11,7 +11,7 @@
     <th/><th/><th/>
   </tr>
   
-<% for project in @projects %>
+<% for project in projects %>
   <tr>
     <td><img src="http://rt.openfoundry.org/img/project_logo/<%= project.id %>.gif" /></td>
   <% for column in my_content_columns %>
@@ -22,8 +22,8 @@
 <% end %>
 </table>
 
-<%= link_to 'Previous page', { :page => @project_pages.current.previous } if @project_pages.current.previous %>
-<%= link_to 'Next page', { :page => @project_pages.current.next } if @project_pages.current.next %> 
+<%= link_to 'Previous page', { :page => project_pages.current.previous } if project_pages.current.previous %>
+<%= link_to 'Next page', { :page => project_pages.current.next } if project_pages.current.next %> 
 
 <br />
 
