--- a/branches/0.1/app/views/partials/_search.rhtml
+++ b/branches/0.1/app/views/partials/_search.rhtml
@@ -1,4 +1,4 @@
-<% form_tag '/openfoundry/search' do -%>
+<% form_tag '/openfoundry/search', :method => :get do -%>
 	<%= text_field_tag 'query','', :size => 10 %>
 	<%= submit_tag 'search' %>
 <% end -%>
