--- a/branches/0.1/app/views/release/uploadfiles.rhtml
+++ b/branches/0.1/app/views/release/uploadfiles.rhtml
@@ -1,53 +1,61 @@
 <div id=uploadfiles_view>
-
-<br/>
-
-<% form_remote_for :controller => 'release',:action => 'addfiles' do -%>
-  <h2>Project Upload Reposity</h2>
-  <h3>Current Dir: <%= @current_dir %> </h3>
-  <p>
-  <%= link_to_remote "[upper dir]", :url => {
-      :contrller => 'release', :action => 'uploadfiles',
-      :move => @upper_dir,
-      :layout => 'false'
-  }, :update => "uploadfiles_view" -%>
+  <% unless flash.now[:message].nil? -%>
+    <h1> <%= flash.now[:message]%> </h1>
+    <% end -%>
+    <div id=release_show>
+      <%= show_release @release %>
+    </div>
+    <br/>
   
-  <%=submit_tag 'Add File'%>
-  </p>
+    <% form_remote_tag :update => "uploadfiles_view", :url => { 
+        :project_id => @project.id, :action => :addfiles,
+        :release_id => @release.id  } do -%>
   
-  <div id=uploaddirs>
-  
-  <% @uploaddirs.sort.each do |dir| -%>
-  <li>
-      <%= link_to_remote dir, :url => {
+      <h2>Project Upload Reposity</h2>
+      <h3>Current Dir: <%= @current_dir %> </h3>
+      <input name=current_dir type="hidden" value=<%= @current_dir %> />
+      <p>
+        <%= link_to_remote "[upper dir]", :url => {
           :contrller => 'release', :action => 'uploadfiles',
-          :move => "#{dir}",
+          :move => @upper_dir,
           :layout => 'false'
-      }, :update => "uploadfiles_view" -%>
-  </li>
-  <% end -%>
+        }, :update => "uploadfiles_view" -%>
+    
+        <%=submit_tag 'Add File'%>
+      </p>
   
+      <div id=Uploaddirs>
+    
+        <% @uploaddirs.sort.each do |dir| -%>
+          <li>
+            <%= link_to_remote dir, :url => {
+              :contrller => 'release', :action => 'uploadfiles',
+              :move => "#{dir}",
+              :layout => 'false'
+            }, :update => "uploadfiles_view" -%>
+          </li>
+        <% end -%>
+    
+      </div>
+  
+      <div id=Uploadfile_selection>
+        <% unless @uploadfiles.empty? -%>
+          <select name=uploadfiles[] id=release_file_selection multiple size=10>
+      
+            <% @uploadfiles.sort.each do |file| -%>
+              <option id=release_file>  
+                <%= file %>
+              </option>
+      
+            <% end -%>  
+      
+          </select>
+        <% else -%>
+          <h5> Not file found </h5>
+        <%end -%>
+      </div>
+  
+      <br/>
+  
+    <% end -%>
   </div>
-
-  <br/>
-  
-  <div id=uploadfile_selection>
-  <% unless @uploadfiles.empty? -%>
-    <select id=release_file_selection multiple size=15>
-
-    <% @uploadfiles.sort.each do |file| -%>
-    <option id=release_file>  
-      <%= file %>
-    </option>
-    <% end -%>  
-
-    </select>
-  <% else -%>
-    <h5> Not file found </h5>
-  <%end -%>
-  </div>
-  
-  <br/>
-
-<% end -%>
-</div>
