prjid -> project_id

--- a/branches/0.1/app/views/layouts/application.rhtml
+++ b/branches/0.1/app/views/layouts/application.rhtml
@@ -34,7 +34,7 @@
 <div id="LeftWidget">
 	<br/>
 	<%= render :partial => 'partials/login' %>
-	<%if params["prjid"] != nil%>
+	<%if params["project_id"] != nil%>
     <div id="LeftMenu">
       <%=render :partial => "partials/project_menu"%>
     </div>
