--- a/branches/0.1/app/views/news/edit.rhtml
+++ b/branches/0.1/app/views/news/edit.rhtml
@@ -1,9 +1,10 @@
-<h1>Editing news</h1>
+<h1><%=@news.subject%></h1>
 
 <% form_tag :action => 'update', :id => @news do %>
   <%= render :partial => 'form' %>
   <%= submit_tag 'Edit' %>
 <% end %>
 
-<%= link_to 'Show', :action => 'show', :id => @news %> |
-<%= link_to 'Back', :action => 'list' %>
+<%= link_to '詳全文', :action => 'show', :id => @news %> |
+<%= link_to '回列表', :action => 'list' %> | 
+<%= link_to '首頁', :controller => 'openfoundry' %>
