--- a/branches/0.1/app/views/news/show.rhtml
+++ b/branches/0.1/app/views/news/show.rhtml
@@ -1,9 +1,18 @@
 <h1><%=@news.subject%></h1>
+
 <p class="date"><%=@news.updated_at.strftime("更新日期:%Y/%m/%d %H:%M")%></p>
 <div class="content">
-<%= @news.description%>
+  <%= @news.description%>
 </div>
+
 <p class="tags">標籤:<%=@news.tags%></p>
 
-<%= link_to 'OpenFoundry新聞', :action => 'list' %> | 
+<% if permit?("site_admin") || permit?("admin of :project") -%>
+<p>
+  <%= link_to '編輯', :action => 'edit', :id => @news %>
+  <%= link_to '刪除', { :action => 'destroy', :id => @news }, :confirm => '確定要刪除嗎?', :method => :post %>
+</p>
+<% end %>
+
+<%= link_to '回列表', :action => 'list' %> | 
 <%= link_to '首頁', :controller => 'openfoundry' %>
