--- a/branches/0.1/app/views/news/_listn.rhtml
+++ b/branches/0.1/app/views/news/_listn.rhtml
@@ -2,7 +2,7 @@
   <ul>
     <%for news in newsList %>
     <li>
-      <%= link_to news.subject, news1_url(:id => news.id, :project_id => news.catid) %>
+      <%= link_to news.subject, news1_path(:id => news.id, :project_id => news.catid) %>
     </li>
     <%end %>
   </ul>
