--- a/branches/0.1/app/views/news/edit.rhtml
+++ b/branches/0.1/app/views/news/edit.rhtml
@@ -2,7 +2,7 @@
 
 <% form_tag :action => 'update', :id => @news do %>
   <%= render :partial => 'form' %>
-  <%= submit_tag 'Edit' %>
+  <%= submit_tag '修改' %>
 <% end %>
 
 <%= link_to '詳全文', :action => 'show', :id => @news %> |
